syntax = "proto3";

package parca.api;
option go_package = "github.com/parca-dev/parca/proto/profilestore";

import "google/api/annotations.proto";
import "google/api/timestamp.proto";

service ProfileStore {
    rpc WriteRaw(WriteRawRequest) returns (WriteRawResponse) {
        option (google.api.http) = {
            post: "/profiles/writeraw"
            body: "*"
        };
    }
}

message WriteRawRequest{
    string                    tenant  = 1;
    repeated RawProfileSeries series = 2;
}

message WriteRawResponse{}

message RawProfileSeries {
    LabelSet           labels = 1;
    repeated RawSample samples = 2;
}

message Label {
    string name  = 1;
    string value = 2;
}

message LabelSet {
    repeated Label labels = 1;
}

message RawSample {
    bytes raw_profile = 1;
}
